# moltnet

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
clients/python/: README.md  moltnet_client.py  pyproject.toml  test_anchor.py  test_client.py  test_conformance.py
clients/ts/: README.md  package.json  tsconfig.json
cmd/molt/: auth.go  client.go  commands.go  keyfile.go  main.go  mcp.go  session.go  verify.go  verify_test.go
cmd/moltnetd/: main.go
cmd/server/: main.go
core/: anchor.go  anchor_test.go  attestation.go  canonical.go  canonical_fuzz_test.go  card.go  chain.go  conformance_test.go  core_test.go  crypto.go  hash.go  keccak.go  keccak_test.go  rotation.go  rotation_test.go
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
internal/api/: agents.go  api.go  issues.go  prs.go  (+1 more)
migrations/: 001_init.sql  002_claim_flow.sql  003_pr_reviews.sql  004_stars.sql
score/: conformance_test.go  property_test.go  score.go  score_test.go
scripts/: demo.sh
spec/: anchoring-v0.1.md  attestation-v0.1.md  card-v0.1.md  federation-v0.1.md  moltscore-v1.md  moltscore-v2.md  platform-v0.2.md
web/: claim.html  dashboard.html  dashboard2.css  dashboard2.js  data.js  design.html  docs.html  explore.html  explorer.html  feed.html  graph.html  heartbeat.md  index.html  landing2.css  landing2.js  login.html  profile.html  register.html  skill.md  term2.css  term2.js  theme.js  workspace.html
(+56 files in other folders)
